@@ -72,6 +72,9 @@ warning_colour = #FF4E4EFF
 # Colour of 'X' buttons
 x_colour = #FF4E4EFF
 
+# Color of the battery indicator background color while charging
+battery_charging_colour = #E56E00FF
+
 # Relative from the .cfg file path to your more image, recommended 20x20
 more_image = ./default_data/more_dark.png
 
@@ -89,6 +92,9 @@ spinner_image = ./default_data/spinner_dark.png
 
 # Relative from the .cfg file path to your more image, recommended 20x20
 random_image = ./default_data/random_dark.png
+
+# Relative from the .cfg file path to your more image, recommended 26x16
+battery_charging_image = ./default_data/battery_charging_dark.png
 
 # Background image for top screen, recommended 400x240, not used in default themes
 #background_top_image =
