@@ -73,6 +73,9 @@ warning_colour = #FF4747FF
 # Colour of 'X' buttons
 x_colour = #FF4747FF
 
+# Color of the battery indicator background color while charging
+battery_charging_colour = #F97800FF
+
 # Relative from the .cfg file path to your more image, recommended 20x20
 more_image = ./default_data/more_light.png
 
@@ -90,6 +93,9 @@ spinner_image = ./default_data/spinner_light.png
 
 # Relative from the .cfg file path to your more image, recommended 20x20
 random_image = ./default_data/random_light.png
+
+# Relative from the .cfg file path to your more image, recommended 26x16
+battery_charging_image = ./default_data/battery_charging_light.png
 
 # Background image for top screen, recommended 400x240, not used in default themes
 #background_top_image =
